@@ -104,6 +104,7 @@ lib/npg_qc/autoqc/role/upstream_tags.pm
 lib/npg_qc/autoqc/role/verify_bam_id.pm
 lib/npg_qc/autoqc/types.pm
 lib/npg_qc/mqc/reporter.pm
+lib/npg_qc/mqc/skipper.pm
 lib/npg_qc/mqc/outcomes.pm
 lib/npg_qc/mqc/outcomes/keys.pm
 lib/npg_qc/report/genotype_call.pm
